schema/testdata/validation_message_types_and_inline_inputs/schema.keel
message Foo {
  bar Text
}

model Person {
  fields {
    name Text
  }

  functions {
    read getPerson(Foo, baz: Text) returns(Foo)
  }
}