schema/testdata/errors/message_types_and_inline_inputs.keel
message Foo {
    bar Text
}

model Person {
    fields {
        name Text
    }

    actions {
        //expect-error:24:27:ActionInputError:read and write functions must receive exactly one message-based input
        read getPerson(Foo, baz: Text) returns (Foo)
    }
}
